# codexctl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.trunk/: trunk.yaml
docs/superpowers/plans/: 2026-04-04-codexctl.md  2026-04-11-status-usage-based-accounts.md
docs/superpowers/specs/: 2026-04-04-codexctl-design.md  2026-04-11-status-usage-based-accounts-design.md
src/: api.rs  config.rs  lib.rs  main.rs  profile.rs
src/commands/: alias.rs  codex.rs  completions.rs  list.rs  login.rs  mod.rs  remove.rs  save.rs  status.rs  switch.rs  use_profile.rs  whoami.rs
tests/: api_test.rs  cli_test.rs  config_test.rs  profile_test.rs
