[package]
name = "codexctl"
version = "0.1.12"
edition = "2024"
description = "Manage multiple OpenAI Codex CLI accounts"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
comfy-table = "7"
crossterm = "0.29"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "6"
futures = "0.3"
libc = "0.2"
portable-pty = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
vt100 = "0.16"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
